--- a/files/linux/linux-extended.conf
+++ b/files/linux/linux-extended.conf
@@ -11,3 +11,5 @@ UserParameter=net.if.discovery.active,/usr/libexec/zabbix-extensions/scripts/che
 UserParameter=net.if.speed[*],/usr/libexec/zabbix-extensions/scripts/check-netif-speed.sh --check=$1
 # count open files. first and single parameter is pidfile location (also require granted sudo privileges to zabbix user).
 UserParameter=count.openfiles[*],/usr/bin/sudo /usr/bin/lsof -nPp $(cat $1) |tail -n +2 |wc -l
+# cave report
+UserParameter=cave.report,/usr/bin/cave-report.sh|head -1
