--- a/files/redis/redis.conf
+++ b/files/redis/redis.conf
@@ -5,3 +5,4 @@ UserParameter=redis.stat[*],redis-cli info |grep -w $1 |cut -d: -f2
 # get raw data from redis
 UserParameter=redis.raw[*],redis-cli --raw $1 $2
 UserParameter=redis.discovery[*],/usr/libexec/zabbix-extensions/scripts/redis.discovery.sh $1 $2
+UserParameter=redis.config[*],redis-cli --raw config get $1|tail -1
