--- a/files/linux/linux-extended.conf
+++ b/files/linux/linux-extended.conf
@@ -12,4 +12,5 @@ UserParameter=net.if.speed[*],/usr/libexec/zabbix-extensions/scripts/check-netif
 # count open files. first and single parameter is pidfile location (also require granted sudo privileges to zabbix user).
 UserParameter=count.openfiles[*],/usr/bin/sudo /usr/bin/lsof -nPp $(cat $1) |tail -n +2 |wc -l
 # cave report
-UserParameter=cave.report,/usr/bin/cave-report.sh|head -1
+UserParameter=cave.pkg.discovery,/usr/libexec/zabbix-extensions/scripts/cave-pkg-discovery.sh
+UserParameter=cave.pkg.stat[*],/usr/bin/cave-report.sh|grep $1|awk '{print $$1}'
