--- a/files/sphinx2/sphinx2.conf
+++ b/files/sphinx2/sphinx2.conf
@@ -1,6 +1,12 @@
-# Get internal sphinx2 statistics
+# Get internal sphinx2-master instance statistics
 UserParameter=sphinx2.uptime,mysql -s -h 127.0.0.1 -P 9306 -e "show status" |grep -w ^uptime |awk '{print $2}'
 UserParameter=sphinx2.connections,mysql -s -h 127.0.0.1 -P 9306 -e "show status" |grep -w ^connections |awk '{print $2}'
 UserParameter=sphinx2.cmd_search,mysql -s -h 127.0.0.1 -P 9306 -e "show status" |grep -w ^command_search |awk '{print $2}'
 UserParameter=sphinx2.cmd_update,mysql -s -h 127.0.0.1 -P 9306 -e "show status" |grep -w ^command_update |awk '{print $2}'
 UserParameter=sphinx2.queries,mysql -s -h 127.0.0.1 -P 9306 -e "show status" |grep -w ^queries |awk '{print $2}'
+# Get internal sphinx2-slave instance statistics
+UserParameter=sphinx2.slave.uptime,mysql -s -h 127.0.0.1 -P 9301 -e "show status" |grep -w ^uptime |awk '{print $2}'
+UserParameter=sphinx2.slave.connections,mysql -s -h 127.0.0.1 -P 9301 -e "show status" |grep -w ^connections |awk '{print $2}'
+UserParameter=sphinx2.slave.cmd_search,mysql -s -h 127.0.0.1 -P 9301 -e "show status" |grep -w ^command_search |awk '{print $2}'
+UserParameter=sphinx2.slave.cmd_update,mysql -s -h 127.0.0.1 -P 9301 -e "show status" |grep -w ^command_update |awk '{print $2}'
+UserParameter=sphinx2.slave.queries,mysql -s -h 127.0.0.1 -P 9301 -e "show status" |grep -w ^queries |awk '{print $2}'
