Postgresql: Add long transactions check

--- a/files/postgresql/postgresql.conf
+++ b/files/postgresql/postgresql.conf
@@ -3,6 +3,7 @@ UserParameter=pgsql.ping[*],/usr/libexec/zabbix-extensions/scripts/pgsql.ping.sh
 UserParameter=pgsql.uptime,/usr/libexec/zabbix-extensions/scripts/pgsql.uptime.sh
 UserParameter=pgsql.connections[*],/usr/libexec/zabbix-extensions/scripts/pgsql.connections.sh $1 $2
 UserParameter=pgsql.transactions[*],/usr/libexec/zabbix-extensions/scripts/pgsql.transactions.sh $1 $2
+UserParameter=pgsql.transactions.long[*],/usr/libexec/zabbix-extensions/scripts/pgsql.transactions.long.sh $1 $2 $3
 UserParameter=pgsql.db.size[*],/usr/libexec/zabbix-extensions/scripts/pgsql.db.size.sh $1
 UserParameter=pgsql.dbstat[*],/usr/libexec/zabbix-extensions/scripts/pgsql.dbstat.sh $1 $2
 UserParameter=pgsql.relation.size[*],/usr/libexec/zabbix-extensions/scripts/pgsql.relation.size.sh $1 $2
