--- a/files/ruby-vines/ruby-vines.conf
+++ b/files/ruby-vines/ruby-vines.conf
@@ -1,1 +1,1 @@
-UserParameter=ruby.vines.connected_sessions[*],redis-cli -h $1 scard 'cluster:nodes:'$(cat /proc/$(cat /home/pochatok/vines/im.pulscen.ru/pid/vines.pid)/cmdline|awk '{print $$2}')
+UserParameter=ruby.vines.connected_sessions[*],redis-cli -h $1 scard 'cluster:nodes:'$(ps a -u pochatok -o command|grep [v]ines|awk '{print $$2}')
