--- a/files/redis/redis.conf
+++ b/files/redis/redis.conf
@@ -7,4 +7,4 @@ UserParameter=redis.raw[*],redis-cli --raw $1 $2
 UserParameter=redis.atrackers[*],redis-cli --raw get $1"#"$2
 UserParameter=redis.discovery[*],/usr/libexec/zabbix-extensions/scripts/redis.discovery.sh $1 $2
 UserParameter=redis.config[*],redis-cli --raw config get $1|tail -1
-UserParameter=redis.atrackers_discovery[*],/usr/libexec/zabbix-extensions/scripts/redis.atrackers_discovery.sh $1 $2
+UserParameter=redis.atrackers_discovery[*],/usr/libexec/zabbix-extensions/scripts/redis.atrackers_discovery.sh
