--- a/files/redis/redis.conf
+++ b/files/redis/redis.conf
@@ -6,6 +6,6 @@ UserParameter=redis.stat[*],redis-cli info |grep -w $1 |cut -d: -f2
 UserParameter=redis.raw[*],redis-cli --raw $1 $2
 UserParameter=redis.discovery[*],/usr/libexec/zabbix-extensions/scripts/redis.discovery.sh $1 $2
 UserParameter=redis.config[*],redis-cli --raw config get $1|tail -1
-# ActionAtrackers
+# ActionAtrackers data from redis
 UserParameter=redis.atrackers[*],redis-cli --raw get $1"#"$2
 UserParameter=redis.atrackers_discovery,/usr/libexec/zabbix-extensions/scripts/redis.atrackers_discovery.sh
