check process from pidfile

--- a/files/linux/linux-extended.conf
+++ b/files/linux/linux-extended.conf
@@ -14,3 +14,5 @@ UserParameter=count.openfiles[*],/usr/bin/sudo /usr/bin/lsof -nPp $(cat $1) |tai
 # cave report
 UserParameter=cave.pkg.discovery,/usr/libexec/zabbix-extensions/scripts/cave-pkg-discovery.sh
 UserParameter=cave.pkg.stat[*],/usr/bin/cave-report.sh|grep $1|awk '{print $$1}'
+# check process
+UserParameter=proc.num.pidfile[*],pid=$(cat $1) && ps acx|awk -v apid=$pid '{if ( $$1 == apid ) count++} END {print count}' || echo 0
