Logstash: get unixtime of last event error

--- a/files/logstash/logstash.conf
+++ b/files/logstash/logstash.conf
@@ -2,3 +2,4 @@ UserParameter=logstash.instance.discovery,/usr/libexec/zabbix-extensions/scripts
 # memory use process
 UserParameter=logstash.memory.use[*],/usr/libexec/zabbix-extensions/scripts/logstash.memory.use.sh $1 $2
 UserParameter=logstash.last_event[*],field=@timestamp;date -d $(curl -sXGET "http://127.0.0.1:9200/$1-$(date -u +%Y.%m.%d)/_search?pretty=true&q=_exists_:$field&size=1&fields=$field" -d '{ "sort": [ { "@timestamp": { "order": "desc" } } ]}'|grep $field|awk -F '"' '{print $$4}') +%s
+UserParameter=logstash.last_error[*],field=$2;date -d $(curl -sXGET "http://127.0.0.1:9200/$1-$(date -u +%Y.%m.%d)/_search?pretty=true&size=1&fields=$field,@timestamp" -d '{"query": {"filtered": {"query": {"bool": {"should": [{"query_string": {"query": "severity:(FATAL ERROR WARNING) AND _exists_:@timestamp"}}]}}}}, "sort": [ { "@timestamp": { "order": "desc" } } ]}'|grep @timestamp|awk -F '"' '{print $$4}') +%s
