OOM-killer couner fix

--- a/files/linux/linux-extended.conf
+++ b/files/linux/linux-extended.conf
@@ -17,4 +17,4 @@ UserParameter=cave.pkg.stat[*],/usr/bin/cave-report.sh|grep $1|awk '{print $$1}'
 # check process
 UserParameter=proc.num.pidfile[*],pid=$(cat $1) && ps acx|awk -v apid=$pid '{if ( $$1 == apid ) count++} END {print count}' || echo 0
 # OOM check
-UserParameter=system.oom_count,/bin/bash -c 'dmesg|grep -c "Out of memory" || echo ZBX_NOTSUPPORTED'
+UserParameter=system.oom_count,/bin/bash -c 'dmesg|grep -c "Out of memory"'
