asterisk: enable arguments

--- a/files/asterisk/asterisk.conf
+++ b/files/asterisk/asterisk.conf
@@ -1,4 +1,4 @@
 # Asterisk
 UserParameter=asterisk.uplink.discovery,/usr/libexec/zabbix-extensions/scripts/asterisk-uplink-discovery.sh
-UserParameter=asterisk.uplink.status,sudo /usr/sbin/asterisk -x "sip show peer $1" | awk '/Status/ {print $3}'
-UserParameter=asterisk.uplink.response,sudo /usr/sbin/asterisk -x "sip show peer $1" | grep  "Status" | grep -o '[0-9]*'
+UserParameter=asterisk.uplink.status[*],sudo /usr/sbin/asterisk -x "sip show peer $1" | awk '/Status/ {print $3}'
+UserParameter=asterisk.uplink.response[*],sudo /usr/sbin/asterisk -x "sip show peer $1" | grep  "Status" | grep -o '[0-9]*'
