Redis: add specific port checks

--- a/files/redis/redis.conf
+++ b/files/redis/redis.conf
@@ -9,3 +9,8 @@ UserParameter=redis.config[*],redis-cli --raw config get $1|tail -1
 # ActionAtrackers data from redis
 UserParameter=redis.atrackers[*],redis-cli --raw get $1"#"$2
 UserParameter=redis.atrackers_discovery,/usr/libexec/zabbix-extensions/scripts/redis.atrackers_discovery.sh
+# Redis specific port
+UserParameter=redis.sp.keys[*],redis-cli -p $1 info |grep -E -o 'keys=[0-9]+' |awk -F= '{sum += $$2} END {print sum}'
+UserParameter=redis.sp.stat[*],redis-cli -p $1 info |grep -w $2 |cut -d: -f2
+UserParameter=redis.sp.raw[*],redis-cli -p $1 --raw $2 $3
+UserParameter=redis.sp.config[*],redis-cli -p $1 --raw config get $2|tail -1
