--- a/files/postgresql/postgresql.conf
+++ b/files/postgresql/postgresql.conf
@@ -19,4 +19,4 @@ UserParameter=pgsql.streaming.lag[*],/usr/libexec/zabbix-extensions/scripts/pgsq
 UserParameter=pgsql.bgwriter.stat[*],/usr/libexec/zabbix-extensions/scripts/pgsql.bgwriter.sh $1
 UserParameter=pgsql.rsz.sum,ps h -C postgres -o rsz |tr -d ' ' |awk '{sum += $1} END {print sum*1024}'
 UserParameter=pgsql.denorm.field.discovery,/usr/libexec/zabbix-extensions/scripts/pgsql.denorm.field.discovery.sh
-UserParameter=pgsql.denorm.field.state[*],/usr/libexec/zabbix-extensions/scripts/pgsql.denorm.field.state.sh $1
+UserParameter=pgsql.denorm.field.stat[*],/usr/libexec/zabbix-extensions/scripts/pgsql.denorm.field.stat.sh $1 $2
