linux-extented: fix tcp.conn.stat allow null conn

--- a/files/linux/linux-extended.conf
+++ b/files/linux/linux-extended.conf
@@ -46,7 +46,7 @@ UserParameter=net.tcp.seg.out,r=$(cat /proc/net/snmp|awk '/^Tcp:/ {getline; prin
 # '09',  =>  TCP_LAST_ACK
 # '0A',  =>  TCP_LISTEN
 # '0B',  =>  TCP_CLOSING
-UserParameter=net.tcp.conn.stat[*],r=$(cat /proc/net/tcp|awk '{if ( $$4 == "$1" ){ count++}} END {print count}'); [[ -z "$r" ]] && echo ZBX_NOTSUPPORTED || echo $r|head -n 1
+UserParameter=net.tcp.conn.stat[*],r=$(cat /proc/net/tcp|awk 'BEGIN {count=0} {if ( $$4 == "$1" ){ count++}} END {print count}'); [[ -z "$r" ]] && echo ZBX_NOTSUPPORTED || echo $r|head -n 1
 # Broadcast packet I/O stats
 UserParameter=net.bcast.pkt.in,r=$(cat /proc/net/netstat|awk '/^IpExt:/ {getline; print $6}'); [[ -z "$r" ]] && echo ZBX_NOTSUPPORTED || echo $r|head -n 1
 UserParameter=net.bcast.pkt.out,r=$(cat /proc/net/netstat|awk '/^IpExt:/ {getline; print $7}'); [[ -z "$r" ]] && echo ZBX_NOTSUPPORTED || echo $r|head -n 1
