Sphinx loaded indices monitoring - https://jira.railsc.ru/browse/SERVER-2314

--- a/files/sphinx2/sphinx2.conf
+++ b/files/sphinx2/sphinx2.conf
@@ -14,3 +14,4 @@ UserParameter=sphinx2.slave.cmd_update,mysql -s -h 127.0.0.1 -P $(awk -F ':' '/l
 UserParameter=sphinx2.slave.queries,mysql -s -h 127.0.0.1 -P $(awk -F ':' '/listen = .*mysql41/ {print $2}' /home/index/sphinx/slave/conf/sphinx.conf) -e "show status" |grep -w ^queries |awk '{print $2}'
 UserParameter=sphinx2.slave.query_wall,mysql -s -h 127.0.0.1 -P $(awk -F ':' '/listen = .*mysql41/ {print $2}' /home/index/sphinx/slave/conf/sphinx.conf) -e "show status" |grep -w ^query_wall |awk '{print $2}'
 UserParameter=sphinx2.slave.avg_query_wall,mysql -s -h 127.0.0.1 -P $(awk -F ':' '/listen = .*mysql41/ {print $2}' /home/index/sphinx/slave/conf/sphinx.conf) -e "show status" |grep -w ^avg_query_wall |awk '{print $2}'
+UserParameter=sphinx2.index.check,/usr/libexec/zabbix-extensions/scripts/check-sphinx-indexes.sh
