Added: soft lockup check https://jira.railsc.ru/browse/SERVER-2708

--- a/files/linux/linux-extended.conf
+++ b/files/linux/linux-extended.conf
@@ -53,4 +53,5 @@ UserParameter=net.bcast.pkt.out,r=$(cat /proc/net/netstat|awk '/^IpExt:/ {getlin
 # Multicast packet I/O stats
 UserParameter=net.mcast.pkt.in,r=$(cat /proc/net/netstat|awk '/^IpExt:/ {getline; print $4}'); [[ -z "$r" ]] && echo ZBX_NOTSUPPORTED || echo $r|head -n 1
 UserParameter=net.mcast.pkt.out,r=$(cat /proc/net/netstat|awk '/^IpExt:/ {getline; print $5}'); [[ -z "$r" ]] && echo ZBX_NOTSUPPORTED || echo $r|head -n 1
-
+# "soft lockup" check
+UserParameter=system.softlockup_count,/bin/bash -c 'dmesg -k | grep -c "BUG: soft lockup"'
