Add: resque-web monitoring

--- a/files/resque/resque.conf
+++ b/files/resque/resque.conf
@@ -5,3 +5,6 @@ UserParameter=resque.misc.working,source /var/lib/zabbix/home/.bashrc && cd ~/cu
 UserParameter=resque.misc.processed,source /var/lib/zabbix/home/.bashrc && cd ~/current && ~/bin/resque-status -h ka-redis -n resque -k processed
 UserParameter=resque.misc.pending,source /var/lib/zabbix/home/.bashrc && cd ~/current && ~/bin/resque-status -h ka-redis -n resque -k pending
 UserParameter=resque.misc.oldworkers[*], /usr/libexec/zabbix-extensions/scripts/old-resque-jobs.sh $1
+UserParameter=resqueweb.discovery[*],curl -s -H "Host: $(grep -w ^HOST /home/$(grep ^UNICORN_USER /etc/conf.d/unicorn |cut -d\" -f2)/current/config/hosts.rb |cut -d\" -f2)" http://$1:$2/resque/queues/info
+UserParameter=resqueweb.misc.queue[*],curl -s -H "Host: $(grep -w ^HOST /home/$(grep ^UNICORN_USER /etc/conf.d/unicorn |cut -d\" -f2)/current/config/hosts.rb |cut -d\" -f2)" http://$1:$2/resque/queues/status?request=$3\&queue=$4
+UserParameter=resqueweb.misc.common[*],curl -s -H "Host: $(grep -w ^HOST /home/$(grep ^UNICORN_USER /etc/conf.d/unicorn |cut -d\" -f2)/current/config/hosts.rb |cut -d\" -f2)" http://$1:$2/resque/queues/status?request=$3
