--- a/files/linux/linux-extended.conf
+++ b/files/linux/linux-extended.conf
@@ -18,6 +18,7 @@ UserParameter=cave.pkg.stat[*],/usr/bin/cave-report.sh|grep $1|awk '{print $$1}'
 UserParameter=proc.num.pidfile[*],pid=$(cat $1) && ps acx|awk -v apid=$pid '{if ( $$1 == apid ) count++} END {print count}' || echo 0
 # OOM check
 UserParameter=system.oom_count,/bin/bash -c 'dmesg -l err|grep -c "Out of memory"'
+UserParameter=system.oom_check,/bin/bash -c 'awk -f /usr/libexec/zabbix-extensions/scripts/check-oom.awk <(dmesg -l err)'
 # Let's measure dropped packets on interface.
 UserParameter=net.if.drop.in[*],r=$(cat /proc/net/dev|awk '{if ( $$1 == "$1:" ) {print $$5}}'); [[ -z "$r" ]] && echo ZBX_NOTSUPPORTED || echo $r|head -n 1
 UserParameter=net.if.drop.out[*],r=$(cat /proc/net/dev|awk '{if ( $$1 == "$1:" ) {print $$13}}'); [[ -z "$r" ]] && echo ZBX_NOTSUPPORTED || echo $r|head -n 1
