--- a/files/linux/linux-extended.conf
+++ b/files/linux/linux-extended.conf
@@ -2,6 +2,7 @@
 UserParameter=sysctl[*],sysctl $1 |awk '{print $$3}'
 # memory 
 UserParameter=system.pmemusage,/usr/libexec/zabbix-extensions/scripts/mem-usage.sh
+UserParameter=system.vm[*],awk '/$1/ {print $$2}' /proc/meminfo
 # swap discovery
 UserParameter=swap.discovery,/usr/libexec/zabbix-extensions/scripts/swap.discovery.sh
 # cft-check
